@@ -22,7 +22,7 @@
 	  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	  xsi:schemaLocation="http://maven.apache.org/XDOC/2.0 http://maven.apache.org/xsd/xdoc-2.0.xsd">
   <properties>
-    <title>Input/output in Giraph</title>
+    <title>Input/Output in Giraph</title>
   </properties>
 
   <body>
